# ugo-ii-bot

./: .gitignore  Cargo.toml
migrations/: 20221123163854_users_table.sql  20221124055506_users_data.sql  20221125051006_scrum_table.sql  20221126215243_scrum_responses.sql  20221202020855_response_streak.sql  20221202021731_remove_scrum_responses.sql  20221203213424_ugocoin_accounts.sql  20221203220542_ugocoin_account_data.sql  20221206063731_transaction_logs.sql
src/: command.rs  error.rs  main.rs  scrum.rs  scrum_resp.rs  ugocoin.rs  user.rs
src/ugocoin/: account.rs  tx.rs
