[package]
name = "ugo-ii-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
chrono = "0.4.23"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"]}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6", features = [ "sqlite", "runtime-tokio-rustls" ] }
log = "0.4"
simplelog = "^0.12.0"
thousands = "0.2.0"